modificacion de imagen.

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
         <div class="header-logo">
             <a class="site-logo" href="index.html">
-                <img src="images/logodiente1.png" alt="Homepage">
+                <!-- <img src="images/logodiente1.png" alt="Homepage"> -->
             </a>
         </div> <!-- end header-logo -->
 
@@ -78,7 +78,7 @@
     ================================================== -->
     <section id="home" class="s-home target-section" 
                         data-parallax="scroll" 
-                        data-image-src="images/fondo_2.png" 
+                        data-image-src="images/fondo_5.png" 
                         data-natural-width=3000 
                         data-natural-height=2000 
                         data-position-y=top>
@@ -93,7 +93,7 @@
                 </h1>
 
                 <p>
-                    Datti Dental Proveedores <br>
+                    Datti Dental Proveedores. <br>
                     ________________________
                 </p>
             </div> <!-- end home-content__main -->
@@ -145,7 +145,7 @@
         <div class="row" data-aos="fade-up">
             <div class="col-full">
                 <p class="lead">
-                Curabitur arcu erat, accumsan id imperdiet et, porttitor at sem. Donec rutrum congue leo eget malesuada. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse. 
+                Espacio disponible. 
                 </p>
             </div>
         </div> <!-- end about-desc -->
@@ -159,41 +159,38 @@
 
                 <div class="col-block process__col" data-item="1" data-aos="fade-up">
                     <div class="process__text">
-                        <h4>Define</h4>
+                        <h4>Tutulo</h4>
 
                         <p>
-                        Quos dolores saepe mollitia deserunt accusamus autem reprehenderit. Voluptas facere animi explicabo non quis magni recusandae. 
-                        Numquam debitis pariatur omnis facere unde. Laboriosam minus amet nesciunt est. Et saepe eos maxime tempore quasi deserunt ab.
+                        Apartado 
                         </p>
                     </div>
                 </div>
                 <div class="col-block process__col" data-item="2" data-aos="fade-up">
                     <div class="process__text">
-                        <h4>Design</h4>
+                        <h4>tutulo</h4>
 
                         <p>
-                        Quos dolores saepe mollitia deserunt accusamus autem reprehenderit. Voluptas facere animi explicabo non quis magni recusandae. 
-                        Numquam debitis pariatur omnis facere unde. Laboriosam minus amet nesciunt est. Et saepe eos maxime tempore quasi deserunt ab.
+                         
+                        Apartado 
                         </p>
                     </div>
                 </div>
                 <div class="col-block process__col" data-item="3" data-aos="fade-up">
                     <div class="process__text">
-                        <h4>Build</h4>
+                        <h4>Titulo</h4>
 
                         <p>
-                        Quos dolores saepe mollitia deserunt accusamus autem reprehenderit. Voluptas facere animi explicabo non quis magni recusandae. 
-                        Numquam debitis pariatur omnis facere unde. Laboriosam minus amet nesciunt est. Et saepe eos maxime tempore quasi deserunt ab.
+                            Apartado 
                         </p>
                     </div>
                 </div>
                 <div class="col-block process__col" data-item="4" data-aos="fade-up">
                     <div class="process__text">
-                        <h4>Launch</h4>
+                        <h4>Titulo </h4>
 
                         <p>
-                        Quos dolores saepe mollitia deserunt accusamus autem reprehenderit. Voluptas facere animi explicabo non quis magni recusandae. 
-                        Numquam debitis pariatur omnis facere unde. Laboriosam minus amet nesciunt est. Et saepe eos maxime tempore quasi deserunt ab.
+                            Apartado 
                         </p>
                     </div>
                 </div>
@@ -219,7 +216,7 @@
         <div class="row" data-aos="fade-up">
             <div class="col-full">
                 <p class="lead">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse. 
+                        Espacio para texto...   parrafo
                 </p>
             </div>
         </div> <!-- end about-desc -->
@@ -232,9 +229,7 @@
                 </div>
                 <div class="service-text">
                     <h3 class="h4">Endodoncia</h3>
-                    <p>La endodoncia es un tratamiento que consiste en la extracción de la pulpa del diente, 
-                        el cual es un tejido pequeño en forma de hebra que se encuentra en el centro del conducto del diente. Una vez que la pulpa se enferma o se daña, 
-                        se extrae; el espacio que queda se limpia, se vuelve a dar forma y se rellena.
+                    <p>Espacio para texto...
                     </p>
                 </div>
             </div>
@@ -245,9 +240,7 @@
                 </div>
                 <div class="service-text">
                     <h3 class="h4">Periodoncia</h3>
-                    <p>Mediante esta especialidad la cual consiste en encargarse de mantener la salud de los tejidos 
-                        que rodean al diente. Tratando espesificamente las enfermedades a las encías,
-                        donde el resultado es bañina probocando acumulación de placa sarro y las bacteriana.
+                    <p>Espacio para texto...
                     </p>
                 </div>
             </div>
@@ -258,9 +251,7 @@
                 </div>  
                 <div class="service-text">
                     <h3 class="h4">Cirugia Oral Maxilofacial</h3>
-                    <p>La Cirugía Oral y Maxilofacial es un procedimiento quirúrgico que se utiliza para corregir
-                         una amplia cantidad de enfermedades, lesiones y defectos, tanto en la cabeza, como en el cuello, la cara, 
-                        las mandíbulas y los tejidos duros y blandos de la región oral y maxilofacial.
+                    <p>Espacio para texto...
                     </p>
                 </div>
             </div>
@@ -271,8 +262,7 @@
                 </div>
                 <div class="service-text">
                     <h3 class="h4">Reabilitacion Oral</h3>
-                    <p>La rehabilitación oral es la encargada de la restauración es decir devuelve la función estética y armonía oral mediante prótesis dentales de pérdidas de dientes, 
-                        grandes destrucciones o de solucionar problemas estéticos, siempre buscando una oclusión y función correcta.
+                    <p>Espacio para texto...
                     </p>
                 </div>
             </div>
@@ -282,10 +272,8 @@
                     <i class="icon-window"></i>
                 </div>
                 <div class="service-text">
-                    <h3 class="h4">UI/UX Design</h3>
-                    <p>Nemo cupiditate ab quibusdam quaerat impedit magni. Earum suscipit ipsum laudantium. 
-                    Quo delectus est. Maiores voluptas ab sit natus veritatis ut. Debitis nulla cumque veritatis.
-                    Sunt suscipit voluptas ipsa in tempora esse soluta sint.
+                    <h3 class="h4">texto vacio</h3>
+                    <p>Espacio para texto...
                     </p>
                 </div>
             </div>
@@ -295,10 +283,8 @@
                     <i class="icon-lego-block"></i>
                 </div>
                 <div class="service-text">
-                    <h3 class="h4">Mobile Development</h3>
-                    <p>Nemo cupiditate ab quibusdam quaerat impedit magni. Earum suscipit ipsum laudantium. 
-                    Quo delectus est. Maiores voluptas ab sit natus veritatis ut. Debitis nulla cumque veritatis.
-                    Sunt suscipit voluptas ipsa in tempora esse soluta sint.
+                    <h3 class="h4">texto vacio....</h3>
+                    <p>Espacio para texto...
                     </p>
                 </div>
             </div>
