modificacion de menus

--- a/index.html
+++ b/index.html
@@ -576,7 +576,7 @@
                 
             <div class="col-block stats__col ">
                 <div class="stats__count">
-                    <img src="images/despertador.png">
+                    <img src="images/despertador.png" class="imgc">
                     <br>Horarios:</div>
             </div>
             <div class="col-block stats__col">
@@ -591,7 +591,7 @@
             </div> 
             <div class="col-block stats__col">
                 <div class="stats__count">
-                    <img src="images/telefono.png">
+                    <img src="images/telefono.png" class="imgc">
                     <br>Telefono:</div>
                 <h5>555-555-5554</h5> 
             </div>  
@@ -655,7 +655,8 @@
 
         </div>
 
-    </div> end photoSwipe background
+    </div> 
+    
 
 
     <!-- preloader
