menu lateral y texto modificado e menu

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <!--- basic page needs
     ================================================== -->
     <meta charset="utf-8">
-    <title>Datti Dental</title>
+    <title>Datty Dental</title>
     <meta name="description" content="">
     <meta name="author" content="">
 
@@ -93,7 +93,7 @@
                 </h1>
 
                 <p>
-                    Datti Dental Proveedores. <br>
+                    Datty Depósito Dental <br>
                     ________________________
                 </p>
             </div> <!-- end home-content__main -->
