cambio de imagen

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     ================================================== -->
     <section id="home" class="s-home target-section" 
                         data-parallax="scroll" 
-                        data-image-src="images/fondo_5.png" 
+                        data-image-src="images/imagen1.png" 
                         data-natural-width=3000 
                         data-natural-height=2000 
                         data-position-y=top>
@@ -87,16 +87,7 @@
 
         <div class="home-content">
 
-            <div class="row home-content__main">
-                <h1>
-                "Bienvenido"
-                </h1>
-
-                <p>
-                    Datty Depósito Dental <br>
-                    ________________________
-                </p>
-            </div> <!-- end home-content__main -->
+            
 
         </div> <!-- end home-content -->
 
