cambios para pagina

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 
         <div class="row section-header" data-aos="fade-up">
             <div class="col-full">
-                <h3 class="subhead"> Tenemos el mejor instrumental dental de las primeras marcas a precios asequibles</h3>
+                <h3 class="subhead"> Tenemos el mejor instrumental dental de las primeras marcas a precios accesibles</h3>
                 <h1 class="display-1"> ¡OFERTAS!</h1>
             </div>
         </div> <!-- end section-header -->
@@ -143,27 +143,27 @@
 
                 <div class="col-block process__col" data-item="1" data-aos="fade-up">
                     <div class="process__text">
-                        <h4>Dispensador </h4>
+                        <h4>Anestesia zeyco </h4>
 
                         <p>
-                         <img src="images/destacados/Imagen1.png">
+                         <img src="images/destacados/anestecia.png">
                         </p>
                     </div>
                 </div>
                 <div class="col-block process__col" data-item="2" data-aos="fade-up">
                     <div class="process__text">
-                        <h4>Corona</h4>
+                        <h4>Marca sunset</h4>
                         <p>
-                            <img src="images/destacados/Imagen3.png">
+                            <img src="images/destacados/bata.png">
                         </p>
                     </div>
                 </div>
                 <div class="col-block process__col" data-item="3" data-aos="fade-up">
                     <div class="process__text">
-                        <h4>Brackets</h4>
+                        <h4>Corona</h4>
 
                         <p>
-                            <img src="images/destacados/Imagen04.png">
+                            <img src="images/destacados/Imagen3.png">
                         </p>
                     </div>
                 </div>
@@ -173,6 +173,26 @@
 
                         <p>
                             <img src="images/destacados/Imagen05.png">
+                        </p>
+                    </div>
+                </div>
+
+                <div class="col-block process__col" data-item="5" data-aos="fade-up">
+                    <div class="process__text">
+                        <h4>Lámpara Blue phase ivoclar </h4>
+
+                        <p>
+                            <img src="images/destacados/lampara.png">
+                        </p>
+                    </div>
+                </div>
+
+                <div class="col-block process__col" data-item="6" data-aos="fade-up">
+                    <div class="process__text">
+                        <h4>Virtual material de impresión </h4>
+
+                        <p>
+                            <img src="images/destacados/ivoclar.png">
                         </p>
                     </div>
                 </div>
