--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                 </div>
                 <div class="col-block process__col" data-item="3" data-aos="fade-up">
                     <div class="process__text">
-                        <h4>Corona</h4>
+                        <h4>Brackets</h4>
 
                         <p>
                             <img src="images/destacados/Imagen3.png">
@@ -169,10 +169,10 @@
                 </div>
                 <div class="col-block process__col" data-item="4" data-aos="fade-up">
                     <div class="process__text">
-                        <h4>Brackets </h4>
+                        <h4>Guantes de nitrilo</h4>
 
                         <p>
-                            <img src="images/destacados/Imagen05.png">
+                            <img src="images/destacados/Imagen5.png">
                         </p>
                     </div>
                 </div>
@@ -197,6 +197,46 @@
                     </div>
                 </div>
 
+                <div class="col-block process__col" data-item="7" data-aos="fade-up">
+                    <div class="process__text">
+                        <h4>Nsk</h4>
+
+                        <p>
+                            <img src="images/destacados/Imagen10.png">
+                        </p>
+                    </div>
+                </div>
+
+                <div class="col-block process__col" data-item="8" data-aos="fade-up">
+                    <div class="process__text">
+                        <h4>Limas </h4>
+
+                        <p>
+                            <img src="images/destacados/Imagen11.png">
+                        </p>
+                    </div>
+                </div>
+
+                <div class="col-block process__col" data-item="9" data-aos="fade-up">
+                    <div class="process__text">
+                        <h4>Biscem </h4>
+
+                        <p>
+                            <img src="images/destacados/Imagen12.png">
+                        </p>
+                    </div>
+                </div>
+
+                <div class="col-block process__col" data-item="10" data-aos="fade-up">
+                    <div class="process__text">
+                        <h4>Maillefer </h4>
+
+                        <p>
+                            <img src="images/destacados/Imagen13.png">
+                        </p>
+                    </div>
+                </div>
+
             </div> <!-- end process -->
 
         </div> <!-- end about-stats -->
@@ -205,8 +245,7 @@
 
 
     <!-- services
-    ================================================== -->
-    <!----<section id='services' class="s-services light-gray">
+    <section id='services' class="s-services light-gray">
 
         <div class="row section-header" data-aos="fade-up">
             <div class="col-full">
@@ -218,19 +257,30 @@
          <div class="row" data-aos="fade-up">
             <div class="col-full">
                 <p class="lead">
-                ......Espacio
                 </p>
             </div>
         </div> 
 
         <div class="row services-list block-1-3 block-m-1-2 block-tab-full">
-
-            <div class="col-block service-item " data-aos="fade-up">
+                    
+             imagen con tamaño para telefono en clase imagent codigo en numero linea 210
+                <div class="col-block service-item " data-aos="fade-up">
                 <div class="service-icon"  class="imagent">
                     <img src="images/portfolio/gallery/Imagen1.jpg"  class="imagent"/>
                 </div>
                 <div class="service-text">
-                    <h3 class="h4">P</h3>
+                    <h3 class="h4"></h3>
+                    <p>.
+                    </p>
+                </div>
+            </div> 
+
+            <div class="col-block service-item " data-aos="fade-up">
+                <div class="service-icon"  >
+                    <img src="images/portfolio/gallery/Imagen1.jpg"  class="imagent"/>
+                </div>
+                <div class="service-text">
+                    <h3 class="h4"></h3>
                     <p>.
                     </p>
                 </div>
@@ -241,7 +291,7 @@
                     <img src="images/portfolio/gallery/Imagen2.jpg" />
                 </div>
                 <div class="service-text">
-                    <h3 class="h4">M</h3>
+                    <h3 class="h4"></h3>
                     <p>.
                     </p>
                 </div>
@@ -252,7 +302,7 @@
                     <img src="images/portfolio/gallery/Imagen3.jpg" />
                 </div>  
                 <div class="service-text">
-                    <h3 class="h4">C</h3>
+                    <h3 class="h4"></h3>
                     <p>.
                     </p>
                 </div>
@@ -260,10 +310,10 @@
 
             <div class="col-block service-item" data-aos="fade-up">
                 <div class="service-icon service-icon--product-strategy">
-                    <img src="images/portfolio/gallery/Imagen4.png" />
+                    <img src="images/portfolio/gallery/Imagen4.jpg" />
                 </div>
                 <div class="service-text">
-                    <h3 class="h4">P</h3>
+                    <h3 class="h4"></h3>
                     <p>.
                     </p>
                 </div>
@@ -274,7 +324,7 @@
                     <img src="images/portfolio/gallery/Imagen5.jpg" />
                 </div>
                 <div class="service-text">
-                    <h3 class="h4">P</h3>
+                    <h3 class="h4"></h3>
                     <p>.
                     </p>
                 </div>
@@ -285,7 +335,7 @@
                     <img src="images/portfolio/gallery/Imagen6.jpg" />
                 </div>
                 <div class="service-text">
-                    <h3 class="h4">E</h3>
+                    <h3 class="h4"></h3>
                     <p>.
                     </p>
                 </div>
@@ -295,7 +345,7 @@
                     <img src="images/portfolio/gallery/Imagen7.jpg" />
                 </div>
                 <div class="service-text">
-                    <h3 class="h4">I</h3>
+                    <h3 class="h4"></h3>
                     <p>.
                     </p>
                 </div>
@@ -303,10 +353,10 @@
 
             <div class="col-block service-item" data-aos="fade-up">
                 <div class="service-icon  service-icon--ui-design">
-                    <img src="images/portfolio/gallery/Imagen8.png" />
+                    <img src="images/portfolio/gallery/Imagen8.jpg" />
                 </div>
                 <div class="service-text">
-                    <h3 class="h4">3</h3>
+                    <h3 class="h4"></h3>
                     <p>.
                     </p>
                 </div>
@@ -317,7 +367,7 @@
                     <img src="images/portfolio/gallery/Imagen9.jpg" />
                 </div>
                 <div class="service-text">
-                    <h3 class="h4">P</h3>
+                    <h3 class="h4"></h3>
                     <p>.
                     </p>
                 </div>
@@ -326,7 +376,6 @@
         </div> 
 
     </section> -->
-
 
     <!-- works
     ================================================== -->
@@ -439,7 +488,7 @@
                         <div class="item-folio__thumb">
                             <a href="images/portfolio/gallery/ImagenExGr4.png" class="thumb-link" title="clic para detalles" data-size="1050x700">
                                 <img src="images/portfolio/ImagenCh4.png"
-                                     srcset="images/portfolio/ImagenCh4.png 1x, images/portfolio/ImagenGra4.png 2x" alt="">
+                                     srcset="images/portfolio/ImagenCh4.png 1x, images/portfolio/imagenGra4.png 2x" alt="">
                             </a>
                         </div>
 
