cambios en pagina

--- a/index.html
+++ b/index.html
@@ -120,8 +120,8 @@
 
         <div class="row section-header" data-aos="fade-up">
             <div class="col-full">
-                <h3 class="subhead"> Tenemos el mejor instrumental dental de las primeras marcas a precios accesibles</h3>
-                <h1 class="display-1"> ¡OFERTAS!</h1>
+                <h3 class="subhead"> Tenemos lo mejor en material e instrumental dental a los mejores precios</h3>
+            <h1 class="display-1"></h1>
             </div>
         </div> <!-- end section-header -->
 
@@ -143,7 +143,7 @@
 
                 <div class="col-block process__col" data-item="1" data-aos="fade-up">
                     <div class="process__text">
-                        <h4>Anestesia zeyco </h4>
+                        <h4>Anestesia </h4>
 
                         <p>
                          <img src="images/destacados/anestecia.png">
@@ -152,87 +152,87 @@
                 </div>
                 <div class="col-block process__col" data-item="2" data-aos="fade-up">
                     <div class="process__text">
-                        <h4>Marca sunset</h4>
+                        <h4>Anestesia</h4>
                         <p>
-                            <img src="images/destacados/bata.png">
+                            <img src="images/destacados/anestecia1.png">
                         </p>
                     </div>
                 </div>
                 <div class="col-block process__col" data-item="3" data-aos="fade-up">
                     <div class="process__text">
-                        <h4>Brackets</h4>
+                        <h4>Material de impresión</h4>
 
                         <p>
-                            <img src="images/destacados/Imagen3.png">
+                            <img src="images/destacados/impresion.png">
                         </p>
                     </div>
                 </div>
                 <div class="col-block process__col" data-item="4" data-aos="fade-up">
                     <div class="process__text">
-                        <h4>Guantes de nitrilo</h4>
+                        <h4>Material de impresión</h4>
 
                         <p>
-                            <img src="images/destacados/Imagen5.png">
+                            <img src="images/destacados/anestecia2.png">
                         </p>
                     </div>
                 </div>
 
                 <div class="col-block process__col" data-item="5" data-aos="fade-up">
                     <div class="process__text">
-                        <h4>Lámpara Blue phase ivoclar </h4>
+                        <h4>Material de impresión</h4>
 
                         <p>
-                            <img src="images/destacados/lampara.png">
+                            <img src="images/destacados/impresion1.png">
                         </p>
                     </div>
                 </div>
 
                 <div class="col-block process__col" data-item="6" data-aos="fade-up">
                     <div class="process__text">
-                        <h4>Virtual material de impresión </h4>
+                        <h4>Resina </h4>
 
                         <p>
-                            <img src="images/destacados/ivoclar.png">
+                            <img src="images/destacados/resina1.png">
                         </p>
                     </div>
                 </div>
 
                 <div class="col-block process__col" data-item="7" data-aos="fade-up">
                     <div class="process__text">
-                        <h4>Nsk</h4>
+                        <h4>Resina</h4>
 
                         <p>
-                            <img src="images/destacados/Imagen10.png">
+                            <img src="images/destacados/resina2.png">
                         </p>
                     </div>
                 </div>
 
                 <div class="col-block process__col" data-item="8" data-aos="fade-up">
                     <div class="process__text">
-                        <h4>Limas </h4>
+                        <h4>Resina Z 350 </h4>
 
                         <p>
-                            <img src="images/destacados/Imagen11.png">
+                            <img src="images/destacados/resina4.png">
                         </p>
                     </div>
                 </div>
 
                 <div class="col-block process__col" data-item="9" data-aos="fade-up">
                     <div class="process__text">
-                        <h4>Biscem </h4>
+                        <h4>Cemento de ionomeno de vidrio </h4>
 
                         <p>
-                            <img src="images/destacados/Imagen12.png">
+                            <img src="images/destacados/vidrio1.png">
                         </p>
                     </div>
                 </div>
 
                 <div class="col-block process__col" data-item="10" data-aos="fade-up">
                     <div class="process__text">
-                        <h4>Maillefer </h4>
+                        <h4>Cemento de ionomeno de vidrio</h4>
 
                         <p>
-                            <img src="images/destacados/Imagen13.png">
+                            <img src="images/destacados/vidrio2.png">
                         </p>
                     </div>
                 </div>
@@ -384,7 +384,7 @@
         <div class="row section-header" data-aos="fade-up">
             <div class="col-full">
                 <h2 class="subhead">PRODUCTOS</h2>
-                <h1 class="display-1">Datti Depósito Dental
+                <h1 class="display-1">Depósito Dental Datty
                     ofrece una amplia gama de productos para odontologos y técnicos dentales.</h1>
             </div>
         </div> <!-- end section-header -->
@@ -749,7 +749,7 @@
     <div id="preloader" class="w3-cell-row">
         <div id="loader" class="contedorloader">
                 <br>   <br>  
-                <img class="iconoloader" src="images/inicioIcono.gif" >
+                <!-- <img class="iconoloader" src="images/inicioIcono.gif" > -->
         <p class="textos">Cargando......</p>  
         </div>
         <!-- <div>
